auto-load image into editing state #389

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -453,3 +453,12 @@
 .tabbed-workflow-step-body .card-help {
     display:none;
 }
+
+.analysis-areas-workflow-regions-step {
+    height: 100%;
+    width: 100%;
+}
+
+.analysis-areas-workflow-regions-step .style-tools-wrapper {
+    padding: inherit;
+}
