update to use discreet service tab logic #354

--- a/afs/templates/views/components/workflows/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-image-step.htm
@@ -61,6 +61,7 @@
             name: 'manifest-manager',
             params: {
                 summary: true,
+                shouldShowEditService: $data.shouldShowEditService,
                 manifestData: manifestData,
             }
         }
