--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -453,3 +453,9 @@
 .tabbed-workflow-step-body .card-help {
     display:none;
 }
+
+.upload-dataset-step-workflow-component-based-step {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+}
