save appropriate physical thing tile #389

--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -1,3 +1,5 @@
-<!-- ko with: $data, as: 'self' -->
-{% include 'views/components/iiif-annotation.htm' %}
+<!-- ko if: $data.hasLoaded() -->
+    <!-- ko with: $data, as: 'self' -->
+    {% include 'views/components/iiif-annotation.htm' %}
+    <!-- /ko -->
 <!-- /ko -->
