--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -53,32 +53,34 @@
     </div>
 
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
-        <h5 class="summary-value">{% trans 'Sampling Activity' %}</h5>
+        <!-- ko foreach: parentPhysThingAnnotations -->
+        <h5 class="summary-value" data-bind="text: name"></h5>
         <div style="display: inline-flex;">
             <div style="border: solid 1px #ddd">
                 <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
             </div>
-            <div>
-                <div class="file-list" style="display: flex; flex-direction: column;">
-                    <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;">
-                        <div class="summary-label">File Name:</div>
-                        <div class="summary-label">Interpretation</div>
-                        <div class="summary-label">File Parameters</div>
-                    </div>
-                    <!-- ko foreach: reportVals.fileList -->
-                    <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;" 
-                        data-bind="style: {'border-width': $index() === ($parent.reportVals.fileList.length - 1) ? '0px' : '1px'}">
-                        <div class="summary-value" data-bind="text: fileName.value"></div>
-                        <div class="summary-value" data-bind="text: interpretation.value"></div>
-                        <div class="summary-value" data-bind="text: fileParameter.value"></div>
-                    </div>
-                    <!-- /ko -->
+        </div>
+        <!-- /ko -->
+        <div>
+            <div class="file-list" style="display: flex; flex-direction: column;">
+                <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;">
+                    <div class="summary-label">File Name:</div>
+                    <div class="summary-label">Interpretation</div>
+                    <div class="summary-label">File Parameters</div>
                 </div>
-                <div class="final-step-section-block-item">
-                    <div class="block-item files-metadata">
-                        <div class="summary-label">{% trans 'Files: ' %}</div>
-                        <div class="summary-value" data-bind='text: reportVals.fileList.length + "{% trans ' files uploaded' %}"'></div>
-                    </div>
+                <!-- ko foreach: fileList -->
+                <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;" 
+                    data-bind="style: {'border-width': $index() === ($parent.fileList().length - 1) ? '0px' : '1px'}">
+                    <div class="summary-value" data-bind="text: name"></div>
+                    <div class="summary-value" data-bind="text: size"></div>
+                    <div class="summary-value" data-bind="text: url"></div>
+                </div>
+                <!-- /ko -->
+            </div>
+            <div class="final-step-section-block-item">
+                <div class="block-item files-metadata">
+                    <span class="summary-label">{% trans 'Files: ' %}</span>
+                    <span class="summary-value" data-bind='text: fileList().length + "{% trans ' files uploaded' %}"'></span>
                 </div>
             </div>
         </div>
