extends iif-annotation component #389

--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -1,5 +1,11 @@
+{% extends 'views/components/iiif-annotation.htm' %}
+
+{% block workbench %}
 <!-- ko if: $data.hasLoaded() -->
     <!-- ko with: $data, as: 'self' -->
-    {% include 'views/components/iiif-annotation.htm' %}
+        {{ block.super }}
     <!-- /ko -->
 <!-- /ko -->
+{% endblock workbench %}
+
+
