--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -132,13 +132,57 @@
                 <!-- ko if: card.widgets().length > 0 -->
                 {% block form_widgets %}
                 <form class="widgets" style="margin-bottom: 20px;">
+
+
+                    <!-- ko if: $data.partIdentifierAssignmentLabelWidget() -->
+                    <h5>{% trans 'Name for Region (Part)' %}</h5>
+                    <div 
+                        data-bind='
+                            component: {
+                                name: self.form.widgetLookup[$data.partIdentifierAssignmentLabelWidget().widget_id()].name,
+                                params: {
+                                    formData: self.tile.formData,
+                                    tile: self.tile,
+                                    form: self.form,
+                                    config: $data.partIdentifierAssignmentLabelWidget().configJSON,
+                                    label: $data.partIdentifierAssignmentLabelWidget().label(),
+                                    value: self.tile.data[$data.partIdentifierAssignmentLabelWidget().node_id()],
+                                    node: self.form.nodeLookup[$data.partIdentifierAssignmentLabelWidget().node_id()],
+                                    expanded: self.expanded,
+                                    graph: self.form.graph,
+                                    type: "resource-editor",
+                                    disabled: !self.card.isWritable && !self.preview,
+                                }
+                            }, 
+                            css:{
+                                "active": $data.partIdentifierAssignmentLabelWidget().selected,
+                                "hover": $data.partIdentifierAssignmentLabelWidget().hovered,
+                                "$data.partIdentifierAssignmentLabelWidget()-preview": self.preview
+                            }, 
+                            click: function(data, e) {
+                                if (!$data.partIdentifierAssignmentLabelWidget().selected() && self.preview) $data.partIdentifierAssignmentLabelWidget().selected(true);
+                            }, 
+                            event: {
+                                mouseover: function(){
+                                    if (self.preview) $data.partIdentifierAssignmentLabelWidget().hovered(true);
+                                },
+                                mouseout: function(){
+                                    if (self.preview) $data.partIdentifierAssignmentLabelWidget().hovered(null);
+                                }
+                            }, 
+                            visible: $data.partIdentifierAssignmentLabelWidget().visible
+                        '
+                    ></div>
+                    <!-- /ko -->
+
+
                     <div data-bind="foreach: {
                             data:card.widgets, as: 'widget'
                         }">
                         <!-- ko if: ko.unwrap(self.form.nodeLookup[widget.node_id()].datatype) === 'annotation' -->
                         <div class="row widget-wrapper">
                             <div class="form-group">
-                                <label class="control-label widget-input-label" for="" data-bind="text:widget.label"></label>
+                                <h5 style="display: inline-block;" class="control-h5 widget-input-label">{% trans 'Location' %}</h5>
                                 <i data-bind="css: {'ion-asterisk widget-label-required': self.form.nodeLookup[widget.node_id()].isrequired}"></i>
 
                                 <div class="col-xs-12">
@@ -291,42 +335,9 @@
                             </div>
                         </div>
                         <!-- /ko -->
-                        <!-- ko if: ko.unwrap(self.form.nodeLookup[widget.node_id()].datatype) !== 'annotation' -->
-                        <div style="display:none" data-bind="text: console.log('HEREEEREREREE', $data, $data.label())"></div>
-                        <!-- ko if: $data.visible() -->
-                        <h5 data-bind="text: $data.label()"></h5>
-                        <!-- /ko -->
-                        <div data-bind='component: {
-                            name: self.form.widgetLookup[widget.widget_id()].name,
-                            params: {
-                                formData: self.tile.formData,
-                                tile: self.tile,
-                                form: self.form,
-                                config: widget.configJSON,
-                                label: widget.label(),
-                                value: self.tile.data[widget.node_id()],
-                                node: self.form.nodeLookup[widget.node_id()],
-                                expanded: self.expanded,
-                                graph: self.form.graph,
-                                type: "resource-editor",
-                                disabled: !self.card.isWritable && !self.preview,
-                            }
-                        }, css:{
-                            "active": widget.selected,
-                            "hover": widget.hovered,
-                            "widget-preview": self.preview
-                        }, click: function(data, e) {
-                            if (!widget.selected() && self.preview) widget.selected(true);
-                        }, event: {
-                            mouseover: function(){
-                                if (self.preview) widget.hovered(true);
-                            },
-                            mouseout: function(){
-                                if (self.preview) widget.hovered(null);
-                            }
-                        }, visible: widget.visible'></div>
-                        <!-- /ko -->
                     </div>
+
+
                 </form>
                 {% endblock form_widgets %}
                 <!-- /ko -->
