further ux updates #389

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -473,3 +473,21 @@
     align-items: center;
     padding-left: 6px;
 }
+
+.analysis-areas-workflow-regions-step .row.widget-wrapper {
+    padding-bottom: 10px;
+    padding-top: 5px;
+}
+
+.analysis-areas-annotation-step-widget-title {
+    display: inline-block;
+    margin-bottom: 0px;
+}
+
+.analysis-areas-workflow-regions-step .new-provisional-edit-card-container {
+    padding-bottom: 0px;
+}
+
+.analysis-areas-workflow-regions-step .form-group {
+    margin: 0px;
+}
