--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -74,30 +74,14 @@
                                         flex-direction: column;
                                     "
                                 >
-                                    <tr
-                                        data-bind="text: 'foo'"
-                                    ></tr>
-                                    <tr
-                                        data-bind="text: 'bar'"
-                                    ></tr>
-                                    <tr
-                                        data-bind="text: 'baz'"
-                                    ></tr>
-                                    <tr
-                                        data-bind="text: 'qux'"
-                                    ></tr>
-                                    <tr
-                                        data-bind="text: 'quux'"
-                                    ></tr>
-                                    <tr
-                                        data-bind="text: 'quuz'"
-                                    ></tr>
-                                    <tr
-                                        data-bind="text: 'corge'"
-                                    ></tr>
-                                    <tr
-                                        data-bind="text: 'grault'"
-                                    ></tr>
+                                    <!-- ko foreach: $data.observationInstances()-->
+                                        <tr
+                                            data-bind="text: (function(){
+                                                var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
+                                                return $data.data[partIdentifierAssignmentLabelNodeId]();
+                                            })()"
+                                        ></tr>
+                                    <!-- /ko -->
                                 </tbody>
                             </table>
                         </div>
