--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -80,7 +80,7 @@
                                             style="cursor: pointer;"
                                             data-bind="
                                                 scrollTo: $parent.selectedObservationInstance() && $parent.selectedObservationInstance().tileid === $data.tileid,
-                                                click: function() { $parent.selectedObservationInstance($data); },
+                                                click: function() { $parent.selectObservationInstance($data); },
                                                 style: {
                                                     background: (function() {
                                                         if ($parent.selectedObservationInstance() && $parent.selectedObservationInstance().tileid === $data.tileid) {
@@ -111,6 +111,7 @@
                                 color: #eee;
                                 width: 100%;
                             "
+                            data-bind="click: $data.loadNewObservationTile"
                         >
                             <i class="fa fa-folder"></i>
                             <span>
@@ -132,12 +133,12 @@
                                     component: {
                                         name: self.form.widgetLookup[$data.partIdentifierAssignmentLabelWidget().widget_id()].name,
                                         params: {
-                                            formData: self.tile.formData,
-                                            tile: self.tile,
+                                            formData: self.physicalThingPartIdentifierAssignmentTile().formData,
+                                            tile: self.physicalThingPartIdentifierAssignmentTile(),
                                             form: self.form,
                                             config: $data.partIdentifierAssignmentLabelWidget().configJSON,
                                             label: $data.partIdentifierAssignmentLabelWidget().label(),
-                                            value: self.tile.data[$data.partIdentifierAssignmentLabelWidget().node_id()],
+                                            value: self.physicalThingPartIdentifierAssignmentTile().data[$data.partIdentifierAssignmentLabelWidget().node_id()],
                                             node: self.form.nodeLookup[$data.partIdentifierAssignmentLabelWidget().node_id()],
                                             expanded: self.expanded,
                                             graph: self.form.graph,
@@ -301,7 +302,7 @@
                                     </div>
                                     <table class="table">
                                         <tbody>
-                                            <!-- ko foreach: {data: self.featureLookup[widget.node_id()].features, as: 'feature'} -->
+                                            <!-- ko foreach: {data: self.selectedObservationInstanceFeatures, as: 'feature'} -->
                                             <tr class="map-card-feature-item" data-bind="css: {'active': self.selectedFeatureIds().indexOf(feature.id) >= 0}, click: function() { self.showFeature(feature); }">
                                                 <td>
                                                     <span class="map-card-feature-name" data-bind="text: feature.geometry.type"></span>
@@ -335,12 +336,12 @@
                                     component: {
                                         name: self.form.widgetLookup[$data.partIdentifierAssignmentPhysicalPartOfObjectWidget().widget_id()].name,
                                         params: {
-                                            formData: self.tile.formData,
-                                            tile: self.tile,
+                                            formData: self.physicalThingPartIdentifierAssignmentTile().formData,
+                                            tile: self.physicalThingPartIdentifierAssignmentTile(),
                                             form: self.form,
                                             config: $data.partIdentifierAssignmentPhysicalPartOfObjectWidget().configJSON,
                                             label: $data.partIdentifierAssignmentPhysicalPartOfObjectWidget().label(),
-                                            value: self.tile.data[$data.partIdentifierAssignmentPhysicalPartOfObjectWidget().node_id()],
+                                            value: self.physicalThingPartIdentifierAssignmentTile().data[$data.partIdentifierAssignmentPhysicalPartOfObjectWidget().node_id()],
                                             node: self.form.nodeLookup[$data.partIdentifierAssignmentPhysicalPartOfObjectWidget().node_id()],
                                             expanded: self.expanded,
                                             graph: self.form.graph,
@@ -378,12 +379,12 @@
                                     component: {
                                         name: self.form.widgetLookup[$data.partIdentifierAssignmentAnnotatorWidget().widget_id()].name,
                                         params: {
-                                            formData: self.tile.formData,
-                                            tile: self.tile,
+                                            formData: self.physicalThingPartIdentifierAssignmentTile().formData,
+                                            tile: self.physicalThingPartIdentifierAssignmentTile(),
                                             form: self.form,
                                             config: $data.partIdentifierAssignmentAnnotatorWidget().configJSON,
                                             label: $data.partIdentifierAssignmentAnnotatorWidget().label(),
-                                            value: self.tile.data[$data.partIdentifierAssignmentAnnotatorWidget().node_id()],
+                                            value: self.physicalThingPartIdentifierAssignmentTile().data[$data.partIdentifierAssignmentAnnotatorWidget().node_id()],
                                             node: self.form.nodeLookup[$data.partIdentifierAssignmentAnnotatorWidget().node_id()],
                                             expanded: self.expanded,
                                             graph: self.form.graph,
