--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block workbench %}
-<!-- ko if: $data.hasLoaded() -->
+<!-- ko if: $data.hasExternalCardData() -->
     <!-- ko with: $data, as: 'self' -->
         {{ block.super }}
     <!-- /ko -->
