Add analysis area final step using the comp, #391

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -446,6 +446,10 @@
     display: inline-flex;
 }
 
+.final-step table .selected {
+    background: #92ecfc !important;
+}
+
 .tabbed-workflow-step-body .form-group>label {
     display:none;
 }
