changes references from observations to analysis areas

--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -51,7 +51,7 @@
                                 border: 1px solid #ddd;
                                 border-bottom: none;
                             "
-                            data-bind="textInput: $data.observationFilterTerm"
+                            data-bind="textInput: $data.analysisAreaFilterTerm"
                         >
 
                         <div
@@ -75,15 +75,15 @@
                                         flex-direction: column;
                                     "
                                 >
-                                    <!-- ko foreach: $data.filteredObservationInstances -->
+                                    <!-- ko foreach: $data.filteredAnalysisAreaInstances -->
                                         <tr
                                             style="cursor: pointer;"
                                             data-bind="
-                                                scrollTo: $parent.selectedObservationInstance() && $parent.selectedObservationInstance().tileid === $data.tileid,
-                                                click: function() { $parent.selectObservationInstance($data); },
+                                                scrollTo: $parent.selectedAnalysisAreaInstance() && $parent.selectedAnalysisAreaInstance().tileid === $data.tileid,
+                                                click: function() { $parent.selectAnalysisAreaInstance($data); },
                                                 style: {
                                                     background: (function() {
-                                                        if ($parent.selectedObservationInstance() && $parent.selectedObservationInstance().tileid === $data.tileid) {
+                                                        if ($parent.selectedAnalysisAreaInstance() && $parent.selectedAnalysisAreaInstance().tileid === $data.tileid) {
                                                             return '#afd7f7';
                                                         }
                                                     })()
@@ -111,11 +111,11 @@
                                 color: #eee;
                                 width: 100%;
                             "
-                            data-bind="click: $data.loadNewObservationTile"
+                            data-bind="click: $data.loadNewAnalysisAreaTile"
                         >
                             <i class="fa fa-folder"></i>
                             <span>
-                                {% trans 'Add New Observation' %}
+                                {% trans 'Add New Analysis Area' %}
                             </span>
                         </button>
                     </div>
@@ -302,7 +302,7 @@
                                     </div>
                                     <table class="table">
                                         <tbody>
-                                            <!-- ko foreach: {data: self.selectedObservationInstanceFeatures, as: 'feature'} -->
+                                            <!-- ko foreach: {data: self.selectedAnalysisAreaInstanceFeatures, as: 'feature'} -->
                                             <tr class="map-card-feature-item" data-bind="css: {'active': self.selectedFeatureIds().indexOf(feature.id) >= 0}, click: function() { self.showFeature(ko.toJS(feature)); }">
                                                 <td>
                                                     <span class="map-card-feature-name" data-bind="text: feature.geometry.type"></span>
@@ -428,7 +428,7 @@
                         <button 
                             class="btn btn-success" 
                             style="width: 48%;"
-                            data-bind="click: $data.saveObservationTile"
+                            data-bind="click: $data.saveAnalysisAreaTile"
                         >
                             <i class="ion-android-cloud-done"></i>
                             <span style="padding-left: 4px">{% trans 'Save' %}</span>
