--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -2,6 +2,7 @@
 {% load i18n %}
 
 {% block workbench %}
+<div class='loading-mask' data-bind="visible: $data.savingTile()"></div>
 <!-- ko if: $data.hasExternalCardData() -->
     <!-- ko with: $data, as: 'self' -->
         {{ block.super }}
